<resources>
    <string name="app_name">ProyectoGestorDeTareasDomesticas</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="slogan"> Tareas Sencillas </string>
    <string name="crearTarea">Crear Tarea</string>
    <string name="crearHogar">Crear Hogar</string>
    <string name="editarHogar">Editar Hogar</string>
    <string name="editarTarea">Editar Tarea</string>
    <string name="unirse">Unirse</string>
    <string name="codigoHogar">Codigo del Hogar</string>"
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="fechaNacimientoHint">dd/MM/yyyy</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="salir">Salir</string>

</resources>