<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".SignUp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="¡Inicia Sesión!"
        android:textSize="40sp"
        android:layout_margin="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"

        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        />

    <Button
        android:id="@+id/btn_inicioSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciarSesion"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textSize="30dp"
        android:layout_marginTop="40dp"
        />

</LinearLayout>